# Taiyaki-Discord-Bot

./: .gitignore  Cargo.toml  README.md
config/: log4rs.yml
database/: create_db.sql  init_data.sql  start_db.sh
src/: command.rs  handler.rs  lib.rs  main.rs  service.rs  test_db_con.rs
src/commands/: ping.rs  user.rs
src/handlers/: handler.rs  mod.rs  ping_handler.rs
src/model/: config.rs  db.rs  mod.rs  user.rs
