[package]
name = "taiyaki_maker"
version = "0.1.0"
authors = ["Chikuma Chien shaotse.chien@email.ucr.edu"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
log4rs = "1.2.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serde = "1.0"
mysql = "24.*"
poise = "0.6.1"
serde_json = "1.0.113"
lazy_static = "1.4.0"

[dependencies.serenity]
features = ["client", "gateway", "rustls_backend", "model", "standard_framework", "framework"]
